--- a/SecurityMs/Jenkinsfile
+++ b/SecurityMs/Jenkinsfile
@@ -31,7 +31,7 @@ pipeline {
                 echo 'Building Docker image...'
                 // Build the Docker image from the Dockerfile
                 script {
-                    dir('Portfolio/backend/SecurityMs') {
+                    dir('SecurityMs') {
                         sh 'docker build -t $DOCKER_IMAGE .'
                     }
                 }
